# DXNN-OCR-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_CN.md  build.sh  run.sh  setup.sh
benchmark/: CMakeLists.txt  benchmark.cpp  benchmark_results.json  calculate_acc.py  run_benchmark.py
benchmark/results/: DXNN-OCR_benchmark_report.md  image_10_result.json  image_11_result.json  image_12_result.json  image_13_result.json  image_14_result.json  image_15_result.json  image_16_result.json  image_17_result.json  image_18_result.json  image_19_result.json  image_1_result.json  image_20_result.json  image_2_result.json  image_3_result.json  image_4_result.json  image_5_result.json  image_6_result.json  image_7_result.json  image_8_result.json  image_9_result.json
benchmark/results_mobile/: DXNN-OCR_benchmark_report.md  image_10_result.json  image_11_result.json  image_12_result.json  image_13_result.json  image_14_result.json  image_15_result.json  image_16_result.json  image_17_result.json  image_18_result.json  image_19_result.json  image_1_result.json  image_20_result.json  image_2_result.json  image_3_result.json  image_4_result.json  image_5_result.json  image_6_result.json  image_7_result.json  image_8_result.json  image_9_result.json
benchmark/results_server/: DXNN-OCR_benchmark_report.md  image_10_result.json  image_11_result.json  image_12_result.json  image_13_result.json  image_14_result.json  image_15_result.json  image_16_result.json  image_17_result.json  image_18_result.json  image_19_result.json  image_1_result.json  image_20_result.json  image_2_result.json  image_3_result.json  image_4_result.json  image_5_result.json  image_6_result.json  image_7_result.json  image_8_result.json  image_9_result.json
cmake/: BuildOpenCV.cmake  FetchPoppler.cmake
docs/: MIGRATION_PLAN.md  architecture.md
docs/results/server/arm/: DXNN-OCR_Server_benchmark_report.md
docs/results/server/x86/: DXNN-OCR_Server_benchmark_report_dualcards.md  DXNN-OCR_Server_benchmark_report_singlecard.md  DXNN-OCR_Server_benchmark_report_threecards.md
engine/model_files/best/: doc_ori.dxnn
include/classification/: text_classifier.h
include/common/: geometry.h  logger.hpp  types.hpp
include/detection/: text_detector.h
include/pipeline/: document_orientation.h  document_preprocessing.h  ocr_pipeline.h
include/preprocessing/: uvdoc.h
include/recognition/: text_recognizer.h
output_async/: benchmark_results.csv  benchmark_summary.json
output_async/json/: benchmark_detailed_results.json  image_10_ocr_result.json  image_11_ocr_result.json  image_12_ocr_result.json  image_13_ocr_result.json  image_14_ocr_result.json  image_15_ocr_result.json  image_16_ocr_result.json  image_17_ocr_result.json  image_18_ocr_result.json  image_19_ocr_result.json  image_1_ocr_result.json  image_20_ocr_result.json  image_2_ocr_result.json  image_3_ocr_result.json  image_4_ocr_result.json  image_5_ocr_result.json  image_6_ocr_result.json  image_7_ocr_result.json  image_8_ocr_result.json  image_9_ocr_result.json
output_sync/: benchmark_results.csv  benchmark_summary.json
output_sync/json/: benchmark_detailed_results.json  image_10_ocr_result.json  image_11_ocr_result.json  image_12_ocr_result.json  image_13_ocr_result.json  image_14_ocr_result.json  image_15_ocr_result.json  image_16_ocr_result.json  image_17_ocr_result.json  image_18_ocr_result.json  image_19_ocr_result.json  image_1_ocr_result.json  image_20_ocr_result.json  image_2_ocr_result.json  image_3_ocr_result.json  image_4_ocr_result.json  image_5_ocr_result.json  image_6_ocr_result.json  image_7_ocr_result.json  image_8_ocr_result.json  image_9_ocr_result.json
perf/: flamegraph.sh  perf.data
server/: CMakeLists.txt  README.md  file_handler.cpp  file_handler.h  ocr_handler.cpp  ocr_handler.h  pdf_handler.cpp  pdf_handler.h  run_server.sh  server_main.cpp
server/benchmark/: API_benchmark_report.md  CMakeLists.txt  api_benchmark.cpp  api_benchmark_results.json  benchmark.py  benchmark_config.yaml  quick_start.sh  requirements.txt  run.sh  run_api_benchmark.py
server/benchmark/core/: __init__.py  accuracy.py  client.py  config.py  executor.py  metrics.py  monitor.py  reporter.py  visualizer.py
server/benchmark/results/: default_report.md
server/tests/: CMakeLists.txt  run_pdf_ocr_test.sh  test_cli_args.cpp  test_json_response.cpp  test_ocr_request.cpp  test_pdf_handler.cpp  test_request_size_limits.cpp  test_ssl_verification.cpp
server/webui/: app.py
src/classification/: CMakeLists.txt  text_classifier.cpp
src/common/: CMakeLists.txt  geometry.cpp  visualizer.cpp
src/detection/: CMakeLists.txt  db_postprocess.cpp  text_detector.cpp
src/pipeline/: CMakeLists.txt  document_orientation.cpp  document_preprocessing.cpp  ocr_pipeline.cpp
src/preprocessing/: CMakeLists.txt  uvdoc.cpp
src/recognition/: CMakeLists.txt  rec_postprocess.cpp  text_recognizer.cpp
test/: CMakeLists.txt
test/detection/: CMakeLists.txt  test_detector.cpp
test/pipeline/: CMakeLists.txt  test_pipeline.cpp  test_pipeline_async.cpp
test/pipeline/results/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  4.json  5.json  6.json  7.json  8.json  9.json
test/recognition/: CMakeLists.txt  test_recognizer.cpp  test_recognizer_mobile.cpp
test/twocode_images/: labels.json
